--- a/data/theme_mobile/default/index.html
+++ b/data/theme_mobile/default/index.html
@@ -14,6 +14,7 @@
   <meta name="format-detection" content="telephone=no">
   <link href="/theme/css/style.css" rel="stylesheet" type="text/css">
   <link href="/theme/css/index.css" rel="stylesheet" type="text/css">
+  <link rel="shortcut icon" href="/static/img/favicon.ico" type="image/x-icon" />
 </head>
 
 <body>
