--- a/data/theme/default/header.html
+++ b/data/theme/default/header.html
@@ -7,7 +7,7 @@
   <meta name="keywords" content="{$site_keywords}" />
   <meta name="description" content="{$site_description}" />
   <link rel="stylesheet" href="/theme/css/style.css" type="text/css" />
-  <link rel="shortcut icon" href="/static/img/favicon.ico" type="image/x-icon" />
+  <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
 </head>
 
 <body>
