--- a/data/theme/default/index.html
+++ b/data/theme/default/index.html
@@ -5,7 +5,7 @@
 {nav  }
   <div class="newwarp bg">
     <div class="newstitle">
-      <h3>{$xiao['catname']}</h3>
+      <h3><a href="{$xiao['url']}" class="more">{$xiao['catname']}</a></h3>
       <a href="{$xiao['url']}" class="more">more&gt;&gt;</a>
     </div>
     {list catid=$xiao[catid] status=2 num=1}
