--- a/data/theme/default/member/index.html
+++ b/data/theme/default/member/index.html
@@ -1,37 +1,32 @@
 {template header.html}
-<div class="mainbody">
+<div class="mainbody member">
 	<div class="w210 fl">
 	{template member/sidebar.html}
 	</div>
-	<div class="w740 fr">
-	<div class="page bg">
+	<div class="w740 fr bg">
+		<div class="crumbs">
+			<h3>我发布的内容</h3>
+		</div>
 		<div class="newslist">
-			{if !$member['status']} <h3><span class="bt" style="color:#F00"><b>您还没有通过审核！</b></span></h3> {/if}	
-		<div class="blank10 clear"></div>
-
-			<h3><span class="bt">我发布的内容</span></h3> 	
+			{if !$member['status']}
+			<h3><span class="bt" style="color:#F00"><b>您还没有通过审核！</b></span></h3>
+			{/if}
 			<ul class="noborder">
-			{list status=0 username=$member[username] num=10 }
-			<li>
-			<span class="date">{function.date("Y-m-d H:i:s", $xiao['time'])}</span>
-			<a href="{$xiao['url']}" target="_blank">
-			<font color="#FF0000">[未审]</font>
-			{$xiao['title']}
-			</a>
-			</li>
-			{/list}
-			
-			{list  username=$member[username] num=10 }
-			<li>
-			<span class="date">{function.date("Y-m-d H:i:s", $xiao['time'])}</span>
-			<a href="{$xiao['url']}" target="_blank">{$xiao['title']}</a>
-			</li>
-			{/list}
-				</ul>
-		</div>		
-		<div class="blank10 clear"></div>		
-	</div>
-
+				{list status=0 username=$member[username] num=10 }
+				<li>
+					<span class="date">{function.date("Y-m-d H:i:s", $xiao['time'])}</span>
+					<a href="{$xiao['url']}" target="_blank"><font color="#FF0000">[未审]</font>{$xiao['title']}</a>
+				</li>
+				{/list}
+				{list  username=$member[username] num=10 }
+				<li>
+					<span class="date">{function.date("Y-m-d H:i:s", $xiao['time'])}</span>
+					<a href="{$xiao['url']}" target="_blank">{$xiao['title']}</a>
+				</li>
+				{/list}
+			</ul>
+		</div>
+		<div class="listpage">{pagelist}</div>
 	</div>
 </div>
 {template footer.html}
