--- a/data/theme/default/member/index.html
+++ b/data/theme/default/member/index.html
@@ -26,7 +26,7 @@
 				{/list}
 			</ul>
 		</div>
-		<div class="listpage">{pagelist}</div>
+		{$pagination}
 	</div>
 </div>
 {template footer.html}
