--- a/data/theme/default/member/list.html
+++ b/data/theme/default/member/list.html
@@ -39,7 +39,7 @@
                 </div>
             </form>
            <div class="blank10 clear"></div>
-           {$pagelist}
+           {$pagination}
 		</div>
     </div>
 </div>
