--- a/data/theme/default/search.html
+++ b/data/theme/default/search.html
@@ -30,7 +30,7 @@
       </li>
 {/loop}
       </ul>
-      <div class="listpage">{$pagelist}</div>
+      {$pagination}
     </div>
 {/if}
     <div class="clear"></div>
