--- a/data/theme/test/member/list.html
+++ b/data/theme/test/member/list.html
@@ -16,7 +16,7 @@
 					</select>
 					<input type="submit" class="button" value="发布文档" name="submit">
 					</td>
-                    <td align="right"><div class="listpage">{$pagelist}</div></td>
+                    <td align="right">{$pagination}</td>
                   </tr>
                 </table>
                 </div>
