--- a/data/theme_mobile/default/category_product.html
+++ b/data/theme_mobile/default/category_product.html
@@ -19,7 +19,7 @@
                 {/list}
 
                 </ul>
-                <div class="listpage" >{$pagelist}</div>
+                {$pagination}
 		   </div>
 	       <!--列表结束-->
 		
