--- a/data/theme_mobile/default/member/form_list.html
+++ b/data/theme_mobile/default/member/form_list.html
@@ -38,14 +38,12 @@
                       </tr>
                       {/loop}
                     </tbody>
-                </table>		   <div class="blank10 clear"></div>		
-
-<div class="listpage">{pagelist}</div>
+                </table>
+                <div class="blank10 clear"></div>		
+                {$pagination}
                </form>
-
         </div>
 	</div>
-
 		   <div class="blank10 clear"></div>		
 		</div>
 
