--- a/data/theme_mobile/default/search.html
+++ b/data/theme_mobile/default/search.html
@@ -16,6 +16,6 @@
   {/if}
  </ul>
 <ul class="page_navi"><li><a href="/site/list?catid=8&page=1&size=12">下一页 &gt;</a></li></ul>
- <div class="listpage" >{$pagelist}</div>
+{$pagination}
 </div>
 {template footer.html}
