--- a/data/theme/test/bookmark_list.html
+++ b/data/theme/test/bookmark_list.html
@@ -14,7 +14,7 @@
      <li><span class="date">{function.date("Y-m-d", $xiao['time'])}</span> <a href="{$xiao['url']}">· {$xiao['title']}</a></li>
 {/list}
     </ul>
-    <div class="listpage" >{$pagelist}</div>
+    {$pagination}
    </div>
 <!--列表结束-->
    </div>
