--- a/data/theme/test/member/form_list.html
+++ b/data/theme/test/member/form_list.html
@@ -37,7 +37,7 @@
                     </tbody>
                 </table>		   <div class="blank10 clear"></div>		
 
-<div class="listpage">{pagelist}</div>
+                {$pagination}
                </form>
 
         </div>
