--- a/data/theme_mobile/test/list_article.html
+++ b/data/theme_mobile/test/list_article.html
@@ -18,7 +18,7 @@
 
         </ul><!-- list end -->
     </div>
-    <div class="listpage">{$pagelist}</div>
+    {$pagination}
     <div class="clear"></div>
     <div class="blank10 clear"></div>
 </div>
