--- a/data/theme_mobile/test/member/form_list.html
+++ b/data/theme_mobile/test/member/form_list.html
@@ -40,7 +40,7 @@
                     </tbody>
                 </table>		   <div class="blank10 clear"></div>		
 
-<div class="listpage">{pagelist}</div>
+                {$pagination}
                </form>
 
         </div>
