--- a/data/theme/default/member/login.html
+++ b/data/theme/default/member/login.html
@@ -1,34 +1,45 @@
 {template header.html}
+<script type="text/javascript">
+    function reload_code() {
+        document.getElementById('code').src = '{function.url("api/checkcode", array("width"=>80, "height"=>28))}&' + Math.random();
+    }
+</script>
+
 <div class="mainbody">
- <div class="bg" >
-  <form  action="" method="post" >
-  <table width="100%" class="table_form">
-  <input type="hidden" value="{$backurl}" name="data[back]" />
-  <tbody>
-   <tr>
-    <th width="300"></th>
-    <td></td>
-   </tr>
-   <tr>
-    <th><font color="red">*</font> 登录会员：</th>
-    <td> <input type="text" class="input-text" name="data[username]" tabindex="1" /><label><a href="{function.url('member/register')}" target="_blank">注册新会员</a></td>
-   </tr>
-   <tr>
-   <th><font color="red">*</font> 密码：</th><td><input type="password" class="input-text" name="data[password]" tabindex="2" /></td>
-  </tr>
-{if $config['MEMBER_LOGINCODE']}
-  <tr>
-   <th><font color="red">*</font> 验证码：</th><td><input type="text" class="input-text" name="code" style="width:100px" />
-   <img id="code" src="{function.url("api/checkcode/", array("width"=>100, "height"=>30))}" align="absmiddle" title="看不清楚？换一张" onclick="document.getElementById('code').src='{function.url("api/checkcode/", array("width"=>0, "height"=>30))}&'+Math.random();" style="cursor:pointer; margin-top:-3px;"></td>
-   </tr>
-{/if}
-   <tr>
-    <th>&nbsp;</th>
-    <td><input type="submit" class="button" value="登 录" name="submit"></td>
-   </tr>
-  </tbody>
-  </table>
-  </form>
- </div>
+    <div class="container bg">
+        {template crumbs.html}
+        <form action="" method="post">
+            <input type="hidden" value="{$backurl}" name="data[back]" />
+            <table width="100%" class="table_form">
+                <tbody>
+                    <tr>
+                        <th width="300"></th>
+                        <td></td>
+                    </tr>
+                    <tr>
+                        <th><font color="red">*</font> 登录会员：</th>
+                        <td><input type="text" class="input-text" name="data[username]" tabindex="1" /></td>
+                    </tr>
+                    <tr>
+                    <th><font color="red">*</font> 密码：</th>
+                    <td><input type="password" class="input-text" name="data[password]" tabindex="2" /></td>
+                    </tr>
+                {if $config['MEMBER_LOGINCODE']}
+                    <tr>
+                    <th><font color="red">*</font> 验证码：</th>
+                    <td>
+                        <input type="text" class="input-text" name="code" style="width:100px" />
+                        <img id="code" title="看不清楚？换一张" align="absmiddle" onclick="reload_code();" src="{function.url('api/checkcode', array('width'=>80, 'height'=>28))}"  style="cursor:pointer; margin-top:-3px;" />
+                    </td>
+                    </tr>
+                {/if}
+                    <tr>
+                        <th>&nbsp;</th>
+                        <td><input type="submit" class="button" value="登 录" name="submit"></td>
+                    </tr>
+                </tbody>
+            </table>
+        </form>
+    </div>
 </div>
 {template footer.html}
