--- a/data/theme/default/member/profile_edit.html
+++ b/data/theme/default/member/profile_edit.html
@@ -2,30 +2,33 @@
 <div class="mainbody">
     <div class="container">
 	    <div class="w210 fl">
-		{template member/sidebar.html}
+		    {template member/sidebar.html}
         </div>
-		<div class="w740 fr bg">
+        <div class="w740 fr bg">
             {template crumbs.html}
             <form action="" method="post">
                 <table width="100%" class="table_form ">
                     <tbody>
                         <tr>
+                            <th width="100">会员模型：</th>
+                            <td>{$member_model[$member['modelid']]['modelname']}</td>
+                        </tr>
+                        <tr>
                             <th width="100">会员名称：</th>
                             <td>{$member['username']}</td>
                         </tr>
                         <tr>
-                            <th>原密码：</th>
-                            <td><input name="data[password1]" type="password" class="input-text" value="" /></td>
+                            <th width="100">会员积分：</th>
+                            <td>{$member['credits']}</td>
                         </tr>
                         <tr>
-                            <th>新密码：</th>
-                            <td><input name="data[password2]" type="password" class="input-text" value="" /></td>
+                            <th>注册邮箱：</th>
+                            <td>{$member['email']}</td>
                         </tr>
+
+                        
                         <tr>
-                            <th>确认密码：</th>
-                            <td><input name="data[password3]" type="password" class="input-text" value="" /></td>
-                        </tr>
-                        <tr>
+                        {$data_fields}
                         <tr>
                             <th style="border:none">&nbsp;</th>
                             <td style="border:none"><input type="submit" class="button" value="保 存" name="submit"></td>
