--- a/data/theme/default/member/form_list.html
+++ b/data/theme/default/member/form_list.html
@@ -35,7 +35,8 @@
                       </tr>
                       {/loop}
                     </tbody>
-                </table>		   <div class="blank10 clear"></div>		
+                </table>
+                <div class="blank10 clear"></div>		
 
                 {$pagination}
                </form>
