--- a/data/theme/default/member/login.html
+++ b/data/theme/default/member/login.html
@@ -1,7 +1,7 @@
 {template header.html}
 <script type="text/javascript">
     function reload_code() {
-        document.getElementById('code').src = '{function.url("api/checkcode", array("width"=>80, "height"=>28))}&' + Math.random();
+        document.getElementById('code').src = '{function.url("api/access/checkcode", array("width"=>80, "height"=>28))}&' + Math.random();
     }
 </script>
 
@@ -29,7 +29,7 @@
                     <th><font color="red">*</font> 验证码：</th>
                     <td>
                         <input type="text" class="input-text" name="code" style="width:100px" />
-                        <img id="code" title="看不清楚？换一张" align="absmiddle" onclick="reload_code();" src="{function.url('api/checkcode', array('width'=>80, 'height'=>28))}"  style="cursor:pointer; margin-top:-3px;" />
+                        <img id="code" title="看不清楚？换一张" align="absmiddle" onclick="reload_code();" src="{function.url('api/access/checkcode', array('width'=>80, 'height'=>28))}"  style="cursor:pointer; margin-top:-3px;" />
                     </td>
                     </tr>
                 {/if}
