--- a/data/theme/default/member/register.html
+++ b/data/theme/default/member/register.html
@@ -12,7 +12,7 @@ function checkpass() {
 	}
 }
 function reload_code() {
-	document.getElementById('code').src = '{function.url("api/checkcode", array("width"=>80, "height"=>28))}&' + Math.random();
+	document.getElementById('code').src = '{function.url("api/access/checkcode", array("width"=>80, "height"=>28))}&' + Math.random();
 }
 </script>
 
@@ -53,7 +53,7 @@ function reload_code() {
 						<th><font color="red">*</font> 注册验证：</th>
 						<td>
 							<input type="text" class="input-text" name="code" style="width:100px" />
-							<img id="code" title="看不清楚？换一张" align="absmiddle" onclick="reload_code();" src="{function.url('api/checkcode', array('width'=>80, 'height'=>28))}"  style="cursor:pointer; margin-top:-3px;" />
+							<img id="code" title="看不清楚？换一张" align="absmiddle" onclick="reload_code();" src="{function.url('api/access/checkcode', array('width'=>80, 'height'=>28))}"  style="cursor:pointer; margin-top:-3px;" />
 						</td>
 					</tr>
 					{/if}
