--- a/data/theme_mobile/default/member/login.html
+++ b/data/theme_mobile/default/member/login.html
@@ -2,6 +2,11 @@
 
 {template member/header.html}
 
+<script type="text/javascript">
+  function reflashCode() {
+    document.getElementById('code').src='{function.url("api/access/checkcode", array("width"=>80, "height"=>30))}&'+Math.random();
+  }
+</script>
 <div class="login">
   <form action="" method="post">
     <input type="hidden" value="{$backurl}" name="data[back]" />
@@ -22,7 +27,7 @@
         <div class="input-continer">
           <input type="text" class="input-code" name="code" placeholder="请输入验证码" />
           <img id="code" class="code" align="absmiddle" title="看不清楚？换一张" onclick="reflashCode()"
-          src="{function.url("api/checkcode/", array("width "=>80, "height "=>30))}" />
+          src="{function.url('api/access/checkcode', array('width'=>80, 'height'=>30))}" />
         </div>
       </div>{/if}
 
@@ -36,9 +41,4 @@
     </div>
   </form>
 </div>
-<script type="text/javascript">
-  function reflashCode() {
-    document.getElementById('code').src='{function.url("api/checkcode/", array("width "=>80, "height"=>30))}&'+Math.random();
-  }
-</script>
 {template footer.html}
