--- a/data/theme_mobile/default/show_article.html
+++ b/data/theme_mobile/default/show_article.html
@@ -11,7 +11,7 @@
 <div class="article clearfix">
   <h1 class="article-title">{$title}</h1>
   <div class="article-meta">{function.date("Y-m-d H:i:s", $time)}(浏览：
-    <script type="text/javascript" src="{function.url('api/hits',array('id'=>$id))}"></script>)</div>
+    <script type="text/javascript" src="{function.url('api/index/hits',array('id'=>$id))}"></script>)</div>
   <div class="article-content">
     {$content}
   </div>
