--- a/data/theme_mobile/default/show_product.html
+++ b/data/theme_mobile/default/show_product.html
@@ -12,7 +12,7 @@
    <div class="blank10 clear"></div>
    <h2>{$title}</h2>
    <div class="info">
-    时间：{function.date("Y-m-d H:i:s", $time)} 点击：<script type="text/javascript" src="{function.url('api/hits',array('id'=>$id))}"></script>
+    时间：{function.date("Y-m-d H:i:s", $time)} 点击：<script type="text/javascript" src="{function.url('api/index/hits',array('id'=>$id))}"></script>
     次
    </div>
    <div class="content">
