--- a/data/theme_mobile/test/member/login.html
+++ b/data/theme_mobile/test/member/login.html
@@ -22,7 +22,7 @@
         <div class="input-continer">
           <input type="text" class="input-code" name="code" placeholder="请输入验证码" />
           <img id="code" class="code" align="absmiddle" title="看不清楚？换一张" onclick="reflashCode()"
-          src="{function.url("api/checkcode/", array("width "=>80, "height "=>30))}" />
+          src="{function.url("api/access/checkcode/", array("width "=>80, "height "=>30))}" />
         </div>
       </div>{/if}
 
@@ -38,7 +38,7 @@
 </div>
 <script type="text/javascript">
   function reflashCode() {
-    document.getElementById('code').src='{function.url("api/checkcode/", array("width "=>80, "height"=>30))}&'+Math.random();
+    document.getElementById('code').src='{function.url("api/access/checkcode/", array("width "=>80, "height"=>30))}&'+Math.random();
   }
 </script>
 {template footer.html}
