--- a/data/theme/default/header.html
+++ b/data/theme/default/header.html
@@ -30,14 +30,14 @@
     </div>
     <div class="nav">
         <ul id="nav" class="container clearfix">
-            <li class="nav-item"><h3><a href="{$site_url}">Home</a></h3></li>
+            <li class="nav-item"><a href="{$site_url}">Home</a></li>
 {nav num=5}
             <li class="nav-item{if $current} on{/if}">
-                <h3><a href="{$xiao['url']}">{$xiao['catname']}</a></h3>
+                <a href="{$xiao['url']}">{$xiao['catname']}</a>
 {if $xiao['child']}
                 <ul class="sub">
                     {nav parentid=$xiao[catid]}
-                    <li class="nav-item{if $current} on{/if}"><h3><a href="{$xiao['url']}">{$xiao['catname']}</a></h3></li>
+                    <li class="nav-item{if $current} on{/if}"><a href="{$xiao['url']}">{$xiao['catname']}</a></li>
                     {/nav}
                 </ul>
 {/if}
